@@ -1,5 +1,11 @@
 2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/pwck.c: Use a bool when possible instead of int integers.
+	* src/pwck.c: Ignore return value of setlocale(),
+	bindtextdomain(), and textdomain().
+
+2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/passwd.c: Use a bool when possible instead of int integers.
 	* src/passwd.c: Avoid assignments in comparisons.
 	* src/passwd.c: Add brackets and parenthesis.
